# django-with-a-vue

./: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
api/: models.py  urls.py
api/migrations/: 0001_initial.py
api/profile/: profile.py
med/: asgi.py  settings.py  urls.py  views.py  wsgi.py
middleware/: json_middleware.py
static/src/: App.tsx  App.vue  main.ts  main.tsx
static/src/components/: FileUpload.vue  HelloWorld.vue
static/src/css/: style.css
templates/: index.html
