[tool.poetry]
name = "med"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.0"
django-vite = "^2.0.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
whitenoise = "^6.1.0"
bcrypt = "^3.2.2"
django-stubs = "^1.10.1"
black = "^22.3.0"
autoflake = "^1.4"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "med.settings"
